--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.1.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "jw-angular-pagination": "^1.2.0",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
