--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "heroku": "^7.42.13",
     "jw-angular-pagination": "^1.2.0",
     "ngx-spinner": "^10.0.1",
     "rxjs": "~6.4.0",
